# BrainDrive

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETE_REMOTE_INSTALLATION_FIX.md  CONTRIBUTING.md  DATABASE_INTEGRATION_SUMMARY.md  DEBUGGING_LIFECYCLE_MANAGER_LOADING.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  FINAL_PLUGIN_SLUG_FIX.md  FRONTEND_ERROR_DISPLAY_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  LIFECYCLE_MANAGER_INSTANTIATION_FIX.md  Makefile  Multi-User-Plugin-Lifecycle-Architecture.md  PLUGIN_LOADING_TEST_IMPLEMENTATION_PLAN.md  README.md  REMOTE_INSTALLER_ERROR_IMPROVEMENTS.md  ROADMAP.md  SERVICE_BRIDGE_EXAMPLES.md  TRADEMARK.md  UPDATED_ARCHITECTURE_SUMMARY.md  build_plugins.bat  build_plugins.sh  debug_paths.py  debug_plugin_database.py  migrate.bat  migration_health_history.json  package-lock.json  package.json  resolution-note-katie-budget-gpt55-20260603T145553011Z-iteration.md  set_plugin_source_url.sql  test_plugin_buttons.html  test_plugin_paths.py  (+5 more)
backend/: run.sh  (+17 more)
builds/typescript/src-tauri/: Cargo.toml  tauri.conf.json
builds/typescript/src-tauri/capabilities/: default.json
builds/typescript/src-tauri/fixtures/tailscale/: PROVENANCE.md  serve-ambiguous.json  serve-compatible-root.json  serve-funnel-conflict.json  serve-malformed.txt  serve-occupied-root.json  serve-service-conflict.json  serve-truncated.txt  serve-unrelated.json  (+9 more)
builds/typescript/src-tauri/icons/: icon.icns
builds/typescript/src-tauri/src/: main.rs  tailscale_access.rs  tailscale_runtime.rs
(+1098 files in other folders)
