[package]
name = "braindrive-desktop"
version = "26.4.20"
description = "BrainDrive native desktop shell"
authors = ["BrainDrive"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
