[package]
name = "braindrive-desktop"
version = "26.7.14"
description = "BrainDrive native desktop shell"
authors = ["BrainDrive"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
uuid = { version = "1", features = ["v4"] }
